# KIV

./: .gitignore  DataPreparation.ipynb  GridSearch_results.csv  batch_test.csv  batch_test.parquet  best_EEG_grid.pt  best_cnn_lstm.pt  cnn.py  cnn_improved.py  cnn_improved_rps.py  data_prep.py  gmm.py  gmm_cnn.py  grid_search.csv  grid_search.parquet  grid_search_partial.csv  grid_search_partial3.csv  holdout.csv  holdout.parquet  holdout_rps.csv  holdout_rps.parquet  inference.py  kfold-cv.csv  kfold-cv.parquet  kfold-cv_eeg_lstm_avg.csv  kfold-cv_eeg_lstm_avg.parquet  kfold-cv_eeg_lstm_last.csv  kfold-cv_eeg_lstm_last.parquet  kfold-top5_eeg.parquet  kfold_rps.csv  kfold_rps.parquet  main.py  pyproject.toml  rps_cnn.py  test.py  test_params.csv  text.txt  top10_models.csv  top_model.csv  training_data.csv  (+3 more)
GestureClassification/: DataPreparation.ipynb
inference_models/: inference.pt
report/: JacobLarsen_4101586.bbl  JacobLarsen_4101586.bbl-SAVE-ERROR  JacobLarsen_4101586.bcf  JacobLarsen_4101586.out  JacobLarsen_4101586.run.xml  JacobLarsen_4101586.tex  JacobLarsen_4101586.toc  main.blg  main.out  main.tex  main.toc  project.tex  references.bib
report/_minted/: 2E85A2151CDB31D7FAA3D5E8401B6A3B.highlight.minted  _25A25306AB218B40FFC0A5554EC20D6E.index.minted
report/figures/: .$CNN-LSTM.drawio.bkp  CNN-LSTM.drawio
results/: grid_search1.csv  grid_search1.parquet  grid_search2.csv  grid_search2.parquet  grid_search_partial1.csv  grid_search_partial2.csv  kfold-top5_eeg.csv  kfold_top5_models_rps.csv  kfold_top5_models_rps.parquet  top5_models_eeg.csv
(+7 files in other folders)
